--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.3",
-    "customize-cra": "^1.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1",
-    "react-scripts": "^5.0.1",
-    "workbox-webpack-plugin": "^7.0.0"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
