--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,17 +1,44 @@
 {
-    "name": "Rick and Morty App",
-    "short_name": "R&M App",
-    "description": "Explore Rick and Morty characters",
-    "start_url": ".",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
-    "icons": [
-      {
-        "src": "../logo.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      }
-    ]
-  }
-  
+  "name": "Rick and Morty App",
+  "short_name": "R&M App",
+  "description": "Explore Rick and Morty characters",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "../logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "../logo.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "MedHelp",
+      "url": ".",
+      "icons": [
+        {
+          "src": "assets/img/logo.png",
+          "sizes": "512x512",
+          "type": "image/png"
+        },
+        {
+          "src": "assets/img/logo.png",
+          "type": "image/png"
+        },
+        {
+          "src": "assets/img/logo.png",
+          "sizes": "512x512",
+          "purpose": "maskable",
+          "type": "image/png"
+        }
+      ]
+    }
+  ]
+}
