--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -14,7 +14,13 @@
     },
     {
       "src": "../logo.png",
-      "sizes": "144x144",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "../logo.png",
+      "sizes": "512x512",
+      "purpose": "maskable",
       "type": "image/png"
     }
   ],
@@ -30,6 +36,7 @@
         },
         {
           "src": "../logo.png",
+          "sizes": "192x192",
           "type": "image/png"
         },
         {
